[frontend] Fix z-index related stacking issues (ISH-477)

--- a/Iceshrimp.Frontend/Components/Compose.razor.css
+++ b/Iceshrimp.Frontend/Components/Compose.razor.css
@@ -16,7 +16,7 @@
     position: fixed;
     margin: auto;
     background-color: unset;
-    z-index: +1;
+    z-index: +11;
 }
 
 .backdrop {
