--- a/Iceshrimp.Frontend/Components/EmojiPicker.razor.css
+++ b/Iceshrimp.Frontend/Components/EmojiPicker.razor.css
@@ -17,7 +17,7 @@
 }
 
 .dialog {
-    z-index: +2;
+    z-index: +12;
 }
 
 .emoji {
